--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+
+    def lifecycle_version1 = "2.0.0"
+// ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version1"
    // testImplementation 'junit:junit:4.12'
   //  androidTestImplementation 'androidx.test.ext:junit:1.1.1'
  //   androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
