--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,22 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        // used by Room, to test migrations
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
+            }
+        }
     }
+
+    // used by Room, to test migrations
+    sourceSets {
+        androidTest.assets.srcDirs +=
+                files("$projectDir/schemas".toString())
+    }
+
     //启用databing
     dataBinding{
         enabled true
@@ -30,12 +45,24 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    //声明lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
 
+    //声明livedata
     def lifecycle_version1 = "2.0.0"
 // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version1"
    // testImplementation 'junit:junit:4.12'
   //  androidTestImplementation 'androidx.test.ext:junit:1.1.1'
  //   androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //声明room
+    def room_version = "2.2.0-rc01"
+
+    implementation  "android.arch.persistence.room:runtime:$room_version"
+    annotationProcessor  "android.arch.persistence.room:compiler:$room_version"
+    androidTestImplementation  "android.arch.persistence.room:testing:$room_version"
+    implementation 'android.arch.work:work-runtime:1.0.1'
+
+// For Kotlin use kapt instead of annotationProcessor (注意这个注释)
+   // kapt "androidx.room:room-compiler:$room_version"
 }
