--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,10 @@
     package="com.lucas.jetpackdemo">
 
     <dist:module dist:instant="true" />
-
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -23,6 +25,8 @@
         <activity android:name=".activity.LiveDataActivity"/>
         <activity android:name=".activity.LifecycleActivity"/>
         <activity android:name=".activity.ViewModelActivity"/>
+        <activity android:name=".activity.RoomActivity"/>
+        <activity android:name=".workmanager.WorkManagerActivity"/>
     </application>
 
 </manifest>
