--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven {
-            url 'http://localhost:8081/artifactory/android_group/'
-        }
+//        maven {
+//            url 'http://localhost:8081/artifactory/android_group/'
+//        }
 
     }
     dependencies {
@@ -21,9 +21,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url 'http://localhost:8081/artifactory/android_group/'
-        }
+//        maven {
+//            url 'http://localhost:8081/artifactory/android_group/'
+//        }
 
         
     }
